--- a/src/main/vue/public/index.html
+++ b/src/main/vue/public/index.html
@@ -18,8 +18,21 @@
 <noscript>
   <strong>We're sorry but vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
-<div id="app"></div>
-<!-- built files will be auto injected -->
+<% if(htmlWebpackPlugin.options.ssrEnv=="client"){ %>
+  <script>window.BROWSER_ENV = {ssrEnv: "client"}</script>
+  <!--
+  https://ssr.vuejs.org/zh/guide/hydration.html
+  注意，这里并没有添加 id="app"，而是添加 data-server-rendered 属性：你需要自行添加 ID 或其他能够选取到应用程序根元素的选择器，否则应用程序将无法正常激活。
+  -->
+  <placeholder>
+    <%= "<!--vue-ssr-outlet-->" %>
+  </placeholder>
+<% }else{ %>
+  <script>window.BROWSER_ENV = {}</script>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+<% } %>
+<h1 style="text-align: center">ssrEnv=><%= htmlWebpackPlugin.options.ssrEnv %></h1>
 <h1 style="text-align: center">debug=><%= htmlWebpackPlugin.options.debug %></h1>
 </body>
 </html>
