--- a/src/main/vue/public/index.html
+++ b/src/main/vue/public/index.html
@@ -18,8 +18,11 @@
 <noscript>
   <strong>We're sorry but vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
+<link rel="dns-prefetch" href="//cdn.mathjax.org"/>
+<!-- mathjax -->
+<script src="https://cdn.staticfile.org/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <% if(htmlWebpackPlugin.options.ssrEnv=="client"){ %>
-  <script>window.BROWSER_ENV = {ssrEnv: "client"}</script>
+  <script>window.BROWSER_ENV = {ssrEnv: "client"};</script>
   <!--
   https://ssr.vuejs.org/zh/guide/hydration.html
   注意，这里并没有添加 id="app"，而是添加 data-server-rendered 属性：你需要自行添加 ID 或其他能够选取到应用程序根元素的选择器，否则应用程序将无法正常激活。
@@ -28,7 +31,7 @@
     <%= "<!--vue-ssr-outlet-->" %>
   </placeholder>
 <% }else{ %>
-  <script>window.BROWSER_ENV = {}</script>
+  <script>window.BROWSER_ENV = {};</script>
   <div id="app"></div>
   <!-- built files will be auto injected -->
 <% } %>
