--- a/src/main/vue/public/index.html
+++ b/src/main/vue/public/index.html
@@ -12,7 +12,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <% if(htmlWebpackPlugin.options.ssrEnv=="client"){ %>
+  <title>这里是Java展示的标题</title>
+  <% }else{ %>
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <% } %>
 </head>
 <body>
 <noscript>
@@ -27,14 +31,11 @@
   https://ssr.vuejs.org/zh/guide/hydration.html
   注意，这里并没有添加 id="app"，而是添加 data-server-rendered 属性：你需要自行添加 ID 或其他能够选取到应用程序根元素的选择器，否则应用程序将无法正常激活。
   -->
-  <placeholder>
-    <%= "<!--vue-ssr-outlet-->" %>
-  </placeholder>
 <% }else{ %>
   <script>window.BROWSER_ENV = {};</script>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
 <% } %>
+<div id="app"></div>
+<!-- built files will be auto injected -->
 <h1 style="text-align: center">ssrEnv=><%= htmlWebpackPlugin.options.ssrEnv %></h1>
 <h1 style="text-align: center">debug=><%= htmlWebpackPlugin.options.debug %></h1>
 </body>
